--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,9 @@
-set -sg escape-time 1
+set-window-option -g escape-time 1
 set -g base-index 1
 setw -g pane-base-index 1
 
 #Mouse works as expected
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set-option -g mouse on
 
 setw -g monitor-activity on
 set -g visual-activity on
@@ -38,3 +35,6 @@ bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+
+#set-option -g status-interval 60
+#set-option -g status-left "#[fg=blue,bright]#(gcalcli agenda | head -2 | tail -1)#[default]"
